--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "react-scripts-ts": "3.1.0"
   },
   "scripts": {
-    "start": "react-scripts-ts start",
-    "build": "react-scripts-ts build",
-    "test": "react-scripts-ts test --env=jsdom",
-    "eject": "react-scripts-ts eject"
+    "start": "./node_modules/.bin/react-scripts-ts start",
+    "build": "./node_modules/.bin/react-scripts-ts build",
+    "test": "./node_modules/.bin/react-scripts-ts test --env=jsdom",
+    "eject": "./node_modules/.bin/react-scripts-ts eject"
   },
   "devDependencies": {
     "@types/jest": "^24.0.11",
