--- a/nginx.conf
+++ b/nginx.conf
@@ -46,6 +46,7 @@ http {
   gzip_types
     application/atom+xml
     application/javascript
+    application/x-javascript
     application/json
     application/rss+xml
     application/vnd.ms-fontobject
@@ -53,11 +54,15 @@ http {
     application/x-web-app-manifest+json
     application/xhtml+xml
     application/xml
+    application/xml+rss
     font/opentype
     image/svg+xml
     image/x-icon
+    image/bmp;
     text/css
+    text/xml
     text/plain
+    text/javascript
     text/x-component;
   # text/html is always compressed by HttpGzipModule
 
