--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-router-dom": "^5.0.0",
     "react-scripts-ts": "3.1.0"
   },
   "scripts": {
@@ -20,6 +21,7 @@
     "@types/node": "^11.13.0",
     "@types/react": "^16.8.12",
     "@types/react-dom": "^16.8.3",
+    "@types/react-router-dom": "^4.3.1",
     "typescript": "^3.4.1"
   }
 }
