--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.0",
-    "react-scripts-ts": "3.1.0"
+    "react-scripts-ts": "3.1.0",
+    "react-youtube-background": "^0.1.4"
   },
   "scripts": {
     "start": "./node_modules/.bin/react-scripts-ts start",
