--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,17 @@
 {
     "workbench.colorCustomizations": {
         "activityBar.background": "#432527",
-        "titleBar.activeBackground": "#5E3437",
-        "titleBar.activeForeground": "#FCF9F9"
-    }
+        "activityBar.foreground": "#e7e7e7",
+        "activityBar.inactiveForeground": "#e7e7e799",
+        "activityBarBadge.background": "#3c6739",
+        "activityBarBadge.foreground": "#e7e7e7",
+        "titleBar.activeBackground": "#221314",
+        "titleBar.inactiveBackground": "#22131499",
+        "titleBar.activeForeground": "#e7e7e7",
+        "titleBar.inactiveForeground": "#e7e7e799",
+        "statusBar.background": "#221314",
+        "statusBarItem.hoverBackground": "#432527",
+        "statusBar.foreground": "#e7e7e7"
+    },
+    "peacock.color": "#221314"
 }
