✈️ Migrate to Next.JS

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Memster",
-  "name": "Memster",
+  "short_name": "Lulz tech",
+  "name": "Lulz tech",
   "icons": [
     {
       "src": "favicon.ico",
