--- a/package.json
+++ b/package.json
@@ -1,28 +1,74 @@
 {
-  "name": "memster-landing",
-  "description": "Memster landing",
+  "name": "lulz-tech-landing",
+  "description": "Lulz tech landing",
   "version": "0.1.0",
   "private": true,
   "author": "Alex Mubarakshin",
-  "dependencies": {
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-router-dom": "^5.0.0",
-    "react-scripts-ts": "3.1.0",
-    "react-youtube-background": "^0.1.4"
-  },
   "scripts": {
-    "start": "./node_modules/.bin/react-scripts-ts start",
-    "build": "./node_modules/.bin/react-scripts-ts build",
-    "test": "./node_modules/.bin/react-scripts-ts test --env=jsdom",
-    "eject": "./node_modules/.bin/react-scripts-ts eject"
+    "dev": "next",
+    "build": "next build",
+    "start": "next start",
+    "type-check": "tsc"
+  },
+  "jest": {
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js"
+    ],
+    "transform": {
+      "^.+\\.tsx?$": "ts-jest"
+    },
+    "testMatch": [
+      "**/*.(test|spec).(ts|tsx)"
+    ],
+    "globals": {
+      "ts-jest": {
+        "babelConfig": true,
+        "tsConfig": "jest.tsconfig.json"
+      }
+    },
+    "coveragePathIgnorePatterns": [
+      "/node_modules/",
+      "enzyme.js"
+    ],
+    "setupFilesAfterEnv": [
+      "<rootDir>/enzyme.js"
+    ],
+    "coverageReporters": [
+      "json",
+      "lcov",
+      "text",
+      "text-summary"
+    ],
+    "moduleNameMapper": {
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/mocks.js",
+      "\\.(css|less)$": "<rootDir>/__mocks__/mocks.js"
+    }
+  },
+  "dependencies": {
+    "@zeit/next-sass": "1.0.1",
+    "@zeit/next-typescript": "^1.1.1",
+    "isomorphic-unfetch": "3.0.0",
+    "next": "latest",
+    "next-images": "^1.2.0",
+    "next-transpile-modules": "^2.3.1",
+    "node-sass": "^4.12.0",
+    "postcss": "^7.0.18",
+    "postcss-preset-env": "^6.7.0",
+    "react": "^16.10.2",
+    "react-dom": "^16.10.2",
+    "react-scripts-ts": "3.1.0",
+    "react-youtube-background": "^0.2.1",
+    "webpack": "4.41.2"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-decorators": "7.4.0",
     "@types/jest": "^24.0.11",
-    "@types/node": "^11.13.0",
-    "@types/react": "^16.8.12",
-    "@types/react-dom": "^16.8.3",
-    "@types/react-router-dom": "^4.3.1",
-    "typescript": "^3.4.1"
+    "@types/node": "^12.11.1",
+    "@types/react": "^16.9.3",
+    "@types/react-dom": "^16.9.1",
+    "babel-loader": "8.0.5",
+    "typescript": "^3.6.4"
   }
 }
