--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
       "js"
     ],
     "transform": {
-      "^.+\\.tsx?$": "ts-jest"
+      ".+\\.tsx?$": "ts-jest"
     },
     "testMatch": [
       "**/*.(test|spec).(ts|tsx)"
@@ -48,27 +48,27 @@
   },
   "dependencies": {
     "@zeit/next-sass": "1.0.1",
-    "@zeit/next-typescript": "^1.1.1",
+    "@zeit/next-typescript": "1.1.1",
     "isomorphic-unfetch": "3.0.0",
     "next": "latest",
-    "next-images": "^1.2.0",
-    "next-transpile-modules": "^2.3.1",
-    "node-sass": "^4.12.0",
-    "postcss": "^7.0.18",
-    "postcss-preset-env": "^6.7.0",
-    "react": "^16.10.2",
-    "react-dom": "^16.10.2",
+    "next-images": "1.2.0",
+    "next-transpile-modules": "2.3.1",
+    "node-sass": "4.13.0",
+    "postcss": "7.0.23",
+    "postcss-preset-env": "6.7.0",
+    "react": "16.12.0",
+    "react-dom": "16.12.0",
     "react-scripts-ts": "3.1.0",
-    "react-youtube-background": "^0.2.1",
+    "react-youtube-background": "0.2.1",
     "webpack": "4.41.2"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-decorators": "7.4.0",
-    "@types/jest": "^24.0.11",
-    "@types/node": "^12.11.1",
-    "@types/react": "^16.9.3",
-    "@types/react-dom": "^16.9.1",
-    "babel-loader": "8.0.5",
-    "typescript": "^3.6.4"
+    "@babel/plugin-proposal-decorators": "7.7.0",
+    "@types/jest": "24.0.23",
+    "@types/node": "12.12.11",
+    "@types/react": "16.9.11",
+    "@types/react-dom": "16.9.4",
+    "babel-loader": "8.0.6",
+    "typescript": "3.7.2"
   }
 }
