--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "dev": "next",
     "build": "next build",
     "start": "next start",
-    "type-check": "tsc"
+    "type-check": "tsc",
+    "lint": "./node_modules/.bin/eslint './src/**/*.{ts,tsx}'",
+    "lint:fix": "./node_modules/.bin/eslint --fix './src/**/*.{ts,tsx}'"
   },
   "jest": {
     "moduleFileExtensions": [
@@ -68,7 +70,11 @@
     "@types/node": "12.12.11",
     "@types/react": "16.9.11",
     "@types/react-dom": "16.9.4",
+    "@typescript-eslint/eslint-plugin": "^2.8.0",
+    "@typescript-eslint/parser": "^2.8.0",
     "babel-loader": "8.0.6",
+    "eslint": "6.6.0",
+    "eslint-plugin-react": "^7.16.0",
     "typescript": "3.7.2"
   }
 }
