--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "next-images": "1.2.0",
     "next-transpile-modules": "2.3.1",
     "node-sass": "4.13.0",
-    "postcss": "7.0.23",
+    "postcss": "7.0.24",
     "postcss-preset-env": "6.7.0",
     "react": "16.12.0",
     "react-dom": "16.12.0",
@@ -65,16 +65,16 @@
     "webpack": "4.41.2"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-decorators": "7.7.0",
+    "@babel/plugin-proposal-decorators": "7.7.4",
     "@types/jest": "24.0.23",
-    "@types/node": "12.12.11",
-    "@types/react": "16.9.11",
+    "@types/node": "12.12.17",
+    "@types/react": "16.9.16",
     "@types/react-dom": "16.9.4",
-    "@typescript-eslint/eslint-plugin": "^2.8.0",
-    "@typescript-eslint/parser": "^2.8.0",
+    "@typescript-eslint/eslint-plugin": "2.11.0",
+    "@typescript-eslint/parser": "2.11.0",
     "babel-loader": "8.0.6",
-    "eslint": "6.6.0",
-    "eslint-plugin-react": "^7.16.0",
+    "eslint": "6.7.2",
+    "eslint-plugin-react": "7.17.0",
     "typescript": "3.7.2"
   }
 }
