--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "postcss-preset-env": "6.7.0",
     "react": "16.12.0",
     "react-dom": "16.12.0",
+    "react-ga": "2.7.0",
     "react-scripts-ts": "3.1.0",
     "react-youtube-background": "0.2.1",
     "webpack": "4.41.2"
@@ -70,6 +71,7 @@
     "@types/node": "12.12.17",
     "@types/react": "16.9.16",
     "@types/react-dom": "16.9.4",
+    "@types/react-ga": "2.3.0",
     "@typescript-eslint/eslint-plugin": "2.11.0",
     "@typescript-eslint/parser": "2.11.0",
     "babel-loader": "8.0.6",
